# atmosphere

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.py  framegraph.drawio  main.cpp
assets/weather/: weatherMaps.ptex
hammock/: CMakeLists.txt
hammock/examples/render_graph/: main.cpp
hammock/include/hammock/core/: Buffer.h  CoreUtils.h  Device.h  FrameManager.h  Image.h  RenderGraph.h  ResourceManager.h  SwapChain.h  ThreadPool.h  Types.h  VulkanInstance.h
hammock/include/hammock/scene/: Camera.h
hammock/include/hammock/utils/: ArgParser.h  Filesystem.h
hammock/src/hammock/core/: Device.cpp  FrameManager.cpp  GraphicsPipeline.cpp  ResourceManager.cpp  SwapChain.cpp  VulkanInstance.cpp
hammock/src/hammock/scene/: Camera.cpp
hammock/src/hammock/shaders/raw/: clouds.comp  medium.frag  render_graph.frag  sky.frag  texture.frag
hammock/src/hammock/shaders/raw/common/: cloudsCommon.glsl  composition_binding.glsl
hammock/src/hammock/utils/: UserInterface.cpp
medium/: IScene.h  ParticipatingMediumScene.cpp  ParticipatingMediumScene.h
renderer/: Animation.h  BenchmarkResult.h  Camera.h  IRenderGroup.h  Profiler.h  Renderer.cpp  Renderer.h  Types.h
renderer/atmosphere/: AerialPerspective.cpp  AerialPerspective.h  AtmospherePass.cpp  AtmospherePass.h  ILookUpTable.h  MultipleScattering.cpp  MultipleScattering.h  SkyView.cpp  SkyView.h  Transmittance.cpp  Transmittance.h
renderer/clouds/: CloudsPass.cpp  CloudsPass.h
renderer/composition/: CompositionPass.cpp  CompositionPass.h  GodRaysPass.cpp  GodRaysPass.h  PostProcessingPass.cpp  PostProcessingPass.h
renderer/depth/: DepthPass.cpp  DepthPass.h
renderer/geometry/: GeometryPass.cpp  GeometryPass.h
renderer/ui/: UserInterface.cpp  UserInterface.h
scenes/: IScene.h  ParticipatingMediumScene.cpp  SignedDistanceField.h
shaders/: aerialperspective.slang  clouds.slang  compose.slang  depth.slang  medium.slang  multiplescattering.slang  occlusion.slang  postprocess.slang  sky.slang  skyview.slang  terrain.slang  toolbox.slang  transmittance.slang
